<resources>
    <string name="app_name">Ourpage</string>
    <string name="version">버전 1.2.0</string>
    <string name="email">ourpageapp@gmail.com</string>
    <string name="error_check_network">네트워크 연결을 확인해주세요.</string>
    <string name="error_input_email_password">이메일과 비밀번호를 작성하세요.</string>
    <string name="error_check_email_password">이메일과 비밀번호를 확인해주세요.</string>
    <string name="error_email_already_registered">이미 가입된 이메일입니다.</string>
    <string name="error_not_use_password">사용할 수 없는 비밀번호입니다. (6~12자)</string>
    <string name="error_wrong_code">잘못된 인증 코드를 입력했습니다.</string>
    <string name="error_not_registered_email">가입되지 않은 이메일입니다.</string>
    <string name="error_not_email_pattern">이메일 형식이 아닙니다.</string>
    <string name="error_api">오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="error_permission_denied">사진 촬영과 첨부를 위해 [설정>권한]에서 카메라 및 저장공간 권한을 허용해주세요.</string>
    <string name="error_input_old_pw">기존 비밀번호를 입력해 주세요.</string>
    <string name="error_input_new_pw">새로운 비밀번호를 입력해 주세요.</string>
    <string name="error_input_new_again_pw">새로운 비밀번호를 한번 더 입력해 주세요.</string>
    <string name="error_wrong_old_pw">기존 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="error_different_new_pw">새로운 비밀번호가 서로 다릅니다.</string>
    <string name="error_exceed_img">이미지는 최대 4장까지 첨부할 수 있습니다.</string>
    <string name="error_select_book">책을 선택해 주세요.</string>
    <string name="error_exceed_book_club_cnt">북클럽은 3개까지\n개설 / 가입 가능합니다.</string>
    <string name="error_not_sign_member">가입되지 않은 클럽원 입니다.</string>
    <string name="error_input_title">제목을 입력해주세요.</string>
    <string name="error_input_content">내용을 입력해주세요.</string>
    <string name="error_not_sign_user">아직 가입되지 않은 유저입니다.</string>
    <string name="error_already_invited_member">이미 초대한 클럽원 입니다.</string>
    <string name="title_email">이메일</string>
    <string name="title_password">비밀번호</string>
    <string name="title_password_confirm">비밀번호 확인</string>
    <string name="title_email_authentication">이메일 인증</string>
    <string name="title_password_reissue">비밀번호 재발급</string>
    <string name="title_setting">설정</string>
    <string name="title_man">남성</string>
    <string name="title_woman">여성</string>
    <string name="title_year">년</string>
    <string name="title_month">월</string>
    <string name="title_day">일</string>
    <string name="title_planner">독서 시간이 정해져 있는 계획파</string>
    <string name="title_time_to_time">자투리 시간에 책을 읽는 틈틈이파</string>
    <string name="title_writer">열심히 기록하며 보는 끄적파</string>
    <string name="title_introduce_by_my_style">+ 나만의 스타일로 소개하기 (최대 20자)</string>
    <string name="title_during">동안</string>
    <string name="title_record_book">권의 책을 기록하기</string>
    <string name="title_terms_of_service">서비스 이용약관</string>
    <string name="title_privacy_policy">개인정보 처리 방침</string>
    <string name="title_receive_marketing_information">마케팅 정보 수신</string>
    <string name="title_terms">이용약관</string>
    <string name="title_photos">사진들</string>
    <string name="title_user">내 계정</string>
    <string name="title_library">내 서재</string>
    <string name="title_book_club">북클럽</string>
    <string name="title_checklist_en">CHECK LIST</string>
    <string name="title_change_password">비밀번호 변경</string>
    <string name="title_notice">공지사항</string>
    <string name="title_question">1:1 문의/요청</string>
    <string name="title_open_source_license">오픈소스 라이선스</string>
    <string name="title_old_password">기존 비밀번호</string>
    <string name="title_new_password">새로운 비밀번호</string>
    <string name="title_new_password_again">새로운 비밀번호 재입력</string>
    <string name="title_contact_us">Contact us</string>
    <string name="title_my_info">내 정보</string>
    <string name="title_total_record">총 기록</string>
    <string name="title_total_read_book">읽은 책</string>
    <string name="title_your_taste">당신의 취향</string>
    <string name="title_favorite_genre">좋아하는 장르</string>
    <string name="title_reading_style">책 읽는 스타일</string>
    <string name="title_reading_routine">책 루틴</string>
    <string name="title_goal_setting">목표 관리</string>
    <string name="title_checklist_setting">체크리스트 관리</string>
    <string name="title_update_introduce">자기소개 변경</string>
    <string name="title_record">Record</string>
    <string name="title_select_book">책 선택하기</string>
    <string name="title_reading">읽는 중</string>
    <string name="title_reading_complete">완독</string>
    <string name="title_reading_before">읽고싶은</string>
    <string name="title_search_result">검색결과</string>
    <string name="title_book_option">책 옵션</string>
    <string name="title_record_setting">글 설정</string>
    <string name="title_search">검색</string>
    <string name="title_sort">정렬</string>
    <string name="title_newest">최신순</string>
    <string name="title_oldest">오래된순</string>
    <string name="title_by_name">이름순</string>
    <string name="title_memo_list">MEMO LIST</string>
    <string name="title_club_memo">Club Memo</string>
    <string name="title_trending_memo">Trending Memo</string>
    <string name="title_club_pres">클럽장</string>
    <string name="title_club_mem">클럽원</string>
    <string name="title_book_club_en">BOOK CLUB</string>
    <string name="title_my_book_club">나의 북클럽</string>
    <string name="title_book_club_management">북클럽 관리</string>
    <string name="title_book_club_setting">북클럽 설정</string>
    <string name="title_book_club_help">북클럽 도움말</string>
    <string name="title_book_club_add">북클럽 추가</string>
    <string name="title_help">Our page 도움말</string>
    <string name="title_made_book_club">내가 만든 북클럽</string>
    <string name="title_sign_in_book_club">가입한 북클럽</string>
    <string name="title_create_book_club">북클럽 생성</string>
    <string name="title_club_name">클럽명</string>
    <string name="title_club_introduce">클럽 한줄 소개 및 다짐</string>
    <string name="title_member_info">클럽원 활동 정보</string>
    <string name="title_club_books">Club Books</string>
    <string name="title_email_example">ex) ourpage@gmail.com</string>
    <string name="title_alarm">알림</string>
    <string name="title_alarm_en">Alarm</string>
    <string name="title_public_setting">공개설정</string>
    <string name="title_go_ourpage_user_guide">Our page.\n사용 가이드 바로가기</string>
    <string name="title_ourpage_use_120_percent">아워페이지를 120% 활용하고싶다면?</string>
    <string name="title_review_ourpage">소중한 리뷰로\n아워페이지를 응원해주세요!</string>
    <string name="title_go_review">지금 바로 리뷰 남기러가기.</string>
    <string name="title_invite_history">북클럽 초대내역</string>
    <string name="title_record_of">님의 기록</string>
    <string name="action_login_en">LOG IN</string>
    <string name="action_signin">회원가입</string>
    <string name="action_find_password">비밀번호 찾기</string>
    <string name="action_complete">완료</string>
    <string name="action_send">전송</string>
    <string name="action_resend">재전송</string>
    <string name="action_next">다음</string>
    <string name="action_skip">건너뛰기</string>
    <string name="action_confirm">확인</string>
    <string name="action_retry">재시도</string>
    <string name="action_go_post">기록 쓰러가기</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_quit_membership">계정 탈퇴하기</string>
    <string name="action_send_email">이메일 보내기</string>
    <string name="action_withdrawal1">회원탈퇴</string>
    <string name="action_withdrawal2">탈퇴하기</string>
    <string name="action_add_book">책 추가하기</string>
    <string name="action_delete">삭제</string>
    <string name="action_update">수정하기</string>
    <string name="action_cancel">취소</string>
    <string name="action_delete_book">책 삭제</string>
    <string name="action_more">더보기 ></string>
    <string name="action_add_club">클럽원 추가하기</string>
    <string name="action_undo">되돌리기</string>
    <string name="action_invite_member">클럽원 초대하기</string>
    <string name="action_invite">초대하기</string>
    <string name="action_reject">거절</string>
    <string name="action_accept">수락</string>
    <string name="msg_input_email1">이메일 주소를 입력해 주세요.</string>
    <string name="msg_agree_privacy">이용약관 및 개인정보처리방침에 동의합니다.</string>
    <string name="msg_input_code">인증코드를 입력해주세요.</string>
    <string name="msg_password_reissue_desc">회원가입 시 사용한 이메일로\n임시 비밀번호를 발급해 드릴게요!</string>
    <string name="msg_welcome_ourpage">독서의 순간을 함께 기록하는\nOur page에 오신 것을 환영합니다!</string>
    <string name="msg_introduce_with_book_taste">독서 취향과 함께 당신을 소개해주세요.</string>
    <string name="msg_input_information_display_my_profile">입력한 정보는 추후 북클럽 내 ‘나의 프로필’에 표시됩니다.</string>
    <string name="msg_select_profile_image">프로필 사진을 선택해주세요.</string>
    <string name="msg_your_name">당신의 닉네임은?</string>
    <string name="msg_input_content">내용을 입력해주세요.</string>
    <string name="msg_nickname_condition">특수문자, 한글, 영어 혼용 가능 (최대 10자)</string>
    <string name="msg_select_gender">성별을 선택해주세요.</string>
    <string name="msg_input_birth">생년월일을 입력해주세요.</string>
    <string name="msg_express_yourself">책 읽는 당신을 20자로 표현해 본다면?</string>
    <string name="msg_express_me_hint">나는 책을 정말 좋아하는 사람입니다.</string>
    <string name="msg_select_genre">좋아하는 장르를 자유롭게 선택해주세요.</string>
    <string name="msg_reading_style">거의 다왔어요!\n당신의 독서 스타일은 어떤가요?</string>
    <string name="msg_reading_goal">마지막으로\n당신의 독서 목표를 알려주세요!</string>
    <string name="msg_success_sign_in">회원가입이 완료되었습니다.</string>
    <string name="msg_ready_book_club">COMING SOON!\n다함께 책에 대한 이야기를 나눌 수 있는\n아워페이지 북클럽 서비스를 준비 중입니다.</string>
    <string name="msg_set_goal">목표를 설정해주세요.</string>
    <string name="msg_send_temp_pw">임시 비밀번호가 발급되었습니다.</string>
    <string name="msg_send_temp_pw_desc">임시 비밀번호로 로그인 후 설정 - 비밀번호 재설정에\n들어가서 비밀번호 재설정 후 사용하시길 바랍니다.</string>
    <string name="msg_success_change_pw">비밀번호가 변경되었습니다.</string>
    <string name="msg_contact_desc">Our page 사용 중 문의사항이 있다면\n언제든지 편하게 문의해주세요!</string>
    <string name="msg_withdrawal">*회원 탈퇴 시 ID와 개인 정보, 기록이 삭제됩니다.</string>
    <string name="msg_success_quit_membership">회원 탈퇴가 완료되었습니다. 그동안 Our page를 이용해주셔서 감사합니다.</string>
    <string name="msg_select_favorite_genre">좋아하는 책 장르를 선택해주세요.</string>
    <string name="msg_express_me">나를 한 줄로 표현해보세요.</string>
    <string name="msg_input_inside_20">20자 이내로 입력해주세요.</string>
    <string name="msg_input_introduce">자기 소개를 입력해주세요.</string>
    <string name="msg_update_favorite_genre">좋아하는 장르를 수정해주세요.</string>
    <string name="msg_update_reading_style">독서 스타일을 수정해주세요.</string>
    <string name="msg_update_reading_goal">독서목표를 수정해주세요.</string>
    <string name="msg_write_push">눌러서 작성하세요.</string>
    <string name="msg_input_reading_checklist">독서 체크리스트를 입력해주세요!</string>
    <string name="msg_hint_checklist">독서 체크리스트를 입력해주세요.(최대 26자)</string>
    <string name="msg_complete_checklist">체크리스트를 완료했습니다!</string>
    <string name="msg_select_book">기록할 책을 선택해주세요.</string>
    <string name="msg_input_title">제목을 입력해주세요.</string>
    <string name="msg_record_desc">기억하고 싶은 글귀나 책을 읽는 순간을\n사진으로 기록해보세요.</string>
    <string name="msg_enroll_new_book">새 책을 등록해주세요.</string>
    <string name="msg_select_my_library">내 책장에서 선택하기</string>
    <string name="msg_select_category">책 카테고리를 선택해주세요.</string>
    <string name="msg_where_read">어디서 책을 읽었나요?</string>
    <string name="msg_what_time_read">책 읽은 시간대는?</string>
    <string name="msg_what_time_read_hint">점심시간 / 13:34</string>
    <string name="msg_add_link">함께 첨부하고 싶은 링크가 있다면?</string>
    <string name="msg_add_link_hint">링크 제목</string>
    <string name="msg_input_link">링크를 입력해 주세요.</string>
    <string name="msg_create_record_success">작성이 완료되었습니다.</string>
    <string name="msg_input_location">책과 함께한 장소를 입력해보세요</string>
    <string name="msg_no_book_club">가입된 북클럽이 없습니다.\n친구와 함께 시작해보세요!</string>
    <string name="msg_input_club_name">클럽명을 입력해주세요. (10자 제한)</string>
    <string name="msg_input_club_introduce">목표 등 클럽 소개글을 입력해 주세요.(20자 제한)</string>
    <string name="msg_input_member_email">초대할 클럽원 이메일을 입력해주세요.</string>
    <string name="msg_input_email2">이메일을 입력해주세요.</string>
    <string name="msg_input_invite_message">초대메세지를 입력해주세요.</string>
    <string name="msg_input_invite_message_hint">ex) our page에서 함께 책 읽자!\n입력하지 않으시면 기본 메세지가 전송됩니다.</string>
</resources>