<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout_gradation"
    tools:context=".view.main.bookclub.CreateBookClubFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/create_book_club_tb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/title_create_book_club"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ta_eb_18_kr"
        app:titleTextColor="@color/primary" />

    <TextView
        android:id="@+id/create_book_club_complete_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/action_complete"
        android:textAppearance="@style/ta_b_14_kr"
        app:layout_constraintBottom_toBottomOf="@+id/create_book_club_tb"
        app:layout_constraintEnd_toEndOf="@+id/create_book_club_tb"
        app:layout_constraintTop_toTopOf="@+id/create_book_club_tb" />

    <TextView
        android:id="@+id/create_book_club_club_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_club_name"
        android:textAppearance="@style/ta_b_16_kr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_book_club_tb" />

    <EditText
        android:id="@+id/create_book_club_club_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_grey_10_null_null"
        android:hint="@string/msg_input_club_name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/ta_r_14_kr"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/create_book_club_club_name_tv" />

    <TextView
        android:id="@+id/create_book_club_club_introduce_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_club_introduce"
        android:textAppearance="@style/ta_b_16_kr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_book_club_club_name_et" />

    <EditText
        android:id="@+id/create_book_club_club_introduce_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_grey_10_null_null"
        android:hint="@string/msg_input_club_introduce"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/ta_r_14_kr"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/create_book_club_club_introduce_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>