<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".view.bottomsheet.BookCategoryBottomSheetFragment">

    <TextView
        android:id="@+id/book_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_book_option"
        android:textAppearance="@style/ta_eb_18_kr"
        app:layout_constraintVertical_bias="0.125"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <RadioGroup
        android:id="@+id/book_category_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.6"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/book_category_tv"
        app:layout_constraintBottom_toTopOf="@+id/book_category_btn">

        <RadioButton
            android:id="@+id/book_category_reading_rb"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/selector_book_category"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_reading"
            android:textAppearance="@style/ta_r_12_kr"
            android:textColor="@drawable/selector_book_category_text" />

        <RadioButton
            android:id="@+id/book_category_read_complete_rb"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_book_category"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_reading_complete"
            android:textAppearance="@style/ta_r_12_kr"
            android:textColor="@drawable/selector_book_category_text" />

        <RadioButton
            android:id="@+id/book_category_read_before_rb"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/selector_book_category"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_reading_before"
            android:textAppearance="@style/ta_r_12_kr"
            android:textColor="@drawable/selector_book_category_text" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/book_category_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:enabled="false"
        android:layout_marginBottom="27dp"
        android:stateListAnimator="@null"
        android:background="@drawable/selector_book_category_btn"
        android:text="@string/action_add_book"
        android:textColor="@drawable/selector_book_category_btn_text"
        android:textAppearance="@style/ta_b_14_kr"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>